<resources>
    <string name="app_name">TP6_GRUPO_2</string>
    <string name="formulario_de_contacto">FORMULARIO DE CONTACTO</string>
    <string name="completar_datos_contacto">A continuación, por favor se pide completar más datos personales.</string>
    <string name="nivel_de_estudios">NIVEL DE ESTUDIOS ALCANZADOS</string>
    <string name="primario_incompleto">Primario incompleto</string>
    <string name="primario_completo">Primario completo</string>
    <string name="secundario_incompleto">Secundario incompleto</string>
    <string name="secundario_completo">Secundario completo</string>
    <string name="otros">Otros</string>
    <string name="intereses">INTERESES</string>
    <string name="deporte">Deporte</string>
    <string name="musica">Música</string>
    <string name="arte">Arte</string>
    <string name="tecnologia">Tecnología</string>
    <string-array name="tipo_contacto_opciones">
        <item>Casa</item>
        <item>Trabajo</item>
        <item>Móvil</item>
    </string-array>
    <string name="label_recibir_informacion">DESEA RECIBIR INFORMACION?</string>
    <string name="btn_guardar">GUARDAR</string>
    <string name="titulo_listado_contactos">LISTADO DE CONTACTOS</string>
    <string name="placeholder_contacto">Nombre Apellido - email@ejemplo.com</string>
    <string name="detalle_contacto">Detalle del Contacto</string>
    <string name="nombre_completo">NOMBRE COMPLETO</string>
    <string name="fecha_nacimiento">FECHA DE NACIMIENTO</string>
    <string name="telefono">TELÉFONO</string>
    <string name="correo_electronico">CORREO ELECTRÓNICO</string>
    <string name="direccion">DIRECCIÓN</string>
    <string name="nivel_estudios">NIVEL DE ESTUDIOS</string>
    <string name="suscripcion_informacion">SUSCRIPCIÓN A INFORMACIÓN</string>
    <string name="subtitulo_formulario">Este es un formulario destinado al registro de personas, sus datos personales e intereses.</string>
    <string name="nombre">NOMBRE</string>
    <string name="apellido">APELLIDO</string>
</resources>